# rust_judge

./: .gitignore  Makefile.toml  README.md
.github/workflows/: rust.yml
crates/cli/: Cargo.toml  dropbox.rs  main.rs  services.rs
crates/cli/services/: aizu_online_judge.rs  atcoder.rs  library_checker.rs  yukicoder.rs
crates/example/: Cargo.toml  lib.rs
crates/verify/: Cargo.toml  lib.rs  main.rs
crates/verify_attr/: Cargo.toml  lib.rs
crates/verify_core/: Cargo.toml  attribute.rs  judge.rs  lib.rs  parse.rs  service.rs
crates/verify_core/attribute/: arg.rs  name.rs  no_whitespace_lit_str.rs
crates/verify_core/service/: aizu_online_judge.rs  atcoder.rs  library_checker.rs  mod.rs  yukicoder.rs
crates/verify_core/service/atcoder/: fetch_testcases.rs
