[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verify = { path = "../verify" }
env_logger = "0.10.1"

[lib]
path = "lib.rs"

[features]
verify = []
verify_result = []
fetch_testcases = []
