[package]
name = "rust_judge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = "1.0.193"
tokio = { version = "1.19.2", features = ["rt", "fs"] }

[lib]
path = "lib.rs"
