[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
verify_attr = { path = "../verify_attr" }
verify_core = { path = "../verify_core" }

[lib]
path = "lib.rs"

[[bin]]
name = "cli"
path = "main.rs"
