[package]
name = "verify_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
syn = { version = "2.0.41", features = ["full", "extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"
dirs = "5.0.1"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
tokio = { version = "1.35.1", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
tempfile = "3.9.0"
chrono = "0.4.34"
log = "0.4.21"

[lib]
path = "lib.rs"
